Standard Unity package.

--- a/Assets/package.json
+++ b/Assets/package.json
@@ -19,7 +19,7 @@
     "author": {
         "name": "Mogoson",
         "email": "mogoson@outlook.com",
-        "url": "https://www.mogoson.com"
+        "url": "https://github.com/mogoson"
     },
     "samples": [
         {
